--- a/package/src/assets/global.css
+++ b/package/src/assets/global.css
@@ -1,61 +1,13 @@
-.react-dialog__wrapper {
-  position: fixed;
-  inset: 0;
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.enter-active {
+  transition: all 0.3s ease-out;
 }
 
-.react-dialog__dialog {
-  background-color: #fff;
-  padding: 30px;
-  text-align: center;
+.leave-active {
+  transition: all 0.8s cubic-bezier(1, 0.5, 0.8, 1);
 }
 
-.react-dialog__message {
-  font-size: 16px;
-  color: #000;
-}
-
-.react-dialog__input {
-  width: 240px;
-  height: 40px;
-  border: 1px solid #000;
-  margin-top: 20px;
-  padding: 0 20px;
-}
-
-.react-dialog__button-wrapper {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  column-gap: 10px;
-}
-
-.react-dialog__button-ok {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-  height: 40px;
-  border-radius: 0px;
-  border: none;
-  background: #333;
-  color: #fff;
-  cursor: pointer;
-}
-
-.react-dialog__button-cancel {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-  height: 40px;
-  border-radius: 0px;
-  border: 1px solid #333;
-  color: #333;
-  background-color: #fff;
-  cursor: pointer;
+.enter-from,
+.leave-to {
+  transform: translateX(20px);
+  opacity: 0;
 }
