--- a/test/src/app.css
+++ b/test/src/app.css
@@ -1,6 +1,6 @@
 .default-enter-active,
 .default-leave-active {
-  transition: all 1s ease-in;
+  transition: all 300ms;
 }
 
 .default-enter-from,
@@ -11,11 +11,17 @@
 
 .custom-enter-active,
 .custom-leave-active {
-  transition: all 1s ease-in;
+  transition: all 300ms;
 }
 
 .custom-enter-from,
 .custom-leave-to {
   transform: translateX(20px);
   opacity: 0;
+}
+
+.example {
+  width: 200px;
+  height: 200px;
+  background: burlywood;
 }
