--- a/test/src/app.css
+++ b/test/src/app.css
@@ -1,11 +1,11 @@
 .default-enter-active,
 .default-leave-active {
-  transition: all 1000ms;
+  transition: all 500ms;
 }
 
 .default-enter-from,
 .default-leave-to {
-  transform: translateY(20px);
+  transform: translateX(20px);
   opacity: 0;
 }
 
